--- a/src/pug/snippets/head.pug
+++ b/src/pug/snippets/head.pug
@@ -8,6 +8,6 @@ head
 		meta(name="viewport", content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0")
 		meta(http-equiv="X-UA-Compatible" content="ie=edge")
 	block scripts
-		script(defer src="assets/js/main.min.js")
+		script(defer src="js/main.min.js")
 	block styles
-		link(href="assets/css/main.min.css", rel="stylesheet")
+		link(href="css/main.min.css", rel="stylesheet")
